--- a/examples/SceytDemoApp/src/main/res/layout/fragment_edit_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_edit_profile.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/sceyt_color_primary"
+    android:clickable="true"
+    android:focusable="true"
     tools:parentTag="com.google.android.material.appbar.AppBarLayout">
 
     <com.sceyt.chatuikit.presentation.custom_views.CustomToolbar
@@ -16,83 +18,107 @@
         app:sceytUiToolbarTitle="@string/edit"
         app:sceytUiToolbarTitleTextColor="@color/sceyt_color_text_primary" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/icEditPhoto"
+    <com.sceyt.chatuikit.presentation.custom_views.AvatarView
+        android:id="@+id/avatar"
         android:layout_width="72dp"
         android:layout_height="72dp"
-        android:layout_gravity="center"
         android:layout_marginTop="24dp"
-        android:background="@drawable/ic_avatar_placeholder"
-        android:padding="20dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:srcCompat="@drawable/ic_camera" />
+        app:sceytUiAvatarColor="@color/sceyt_color_overlay_background_2"
+        app:sceytUiAvatarDefaultIcon="@drawable/sceyt_ic_camera_72"
+        app:sceytUiAvatarTextSize="@dimen/extraLargeTextSize"
+        tools:sceytUiAvatarFullName="User name" />
+
+    <ProgressBar
+        android:id="@+id/loadingProfileImage"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/avatar"
+        app:layout_constraintEnd_toEndOf="@+id/avatar"
+        app:layout_constraintStart_toStartOf="@+id/avatar"
+        app:layout_constraintTop_toTopOf="@+id/avatar" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/et_first_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/bg_underline"
+        android:hint="@string/first_name"
+        android:inputType="textPersonName"
+        android:layoutDirection="ltr"
+        android:paddingVertical="15dp"
+        android:singleLine="true"
+        android:textAlignment="viewStart"
+        android:textColor="@color/sceyt_color_text_primary"
+        android:textColorHint="@color/sceyt_color_text_footnote"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/avatar" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/et_last_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:background="@drawable/bg_underline"
+        android:hint="@string/last_name"
+        android:inputType="textPersonName"
+        android:layoutDirection="ltr"
+        android:paddingVertical="15dp"
+        android:singleLine="true"
+        android:textAlignment="viewStart"
+        android:textColor="@color/sceyt_color_text_primary"
+        android:textColorHint="@color/sceyt_color_text_footnote"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_first_name"
+        tools:text="John" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/uriPrefix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:background="@drawable/bg_underline"
+        android:layoutDirection="ltr"
+        android:paddingVertical="15dp"
+        android:text="\@"
+        android:textColor="@color/sceyt_color_text_primary"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/et_last_name"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_last_name"
+        tools:ignore="HardcodedText" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_user_name"
         android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/bg_edit_text_small_bottom_padding"
-        android:backgroundTint="@color/sceyt_color_border"
-        android:ellipsize="end"
-        android:fontFamily="@font/roboto_medium"
-        android:hint="@string/display_name"
-        android:includeFontPadding="false"
-        android:inputType="textPersonName"
-        android:maxLines="1"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_underline"
+        android:hint="@string/user_name"
+        android:inputType="textUri"
+        android:layoutDirection="ltr"
+        android:paddingVertical="15dp"
+        android:singleLine="true"
+        android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_text_primary"
         android:textColorHint="@color/sceyt_color_text_footnote"
-        android:textSize="@dimen/mediumTextSize"
+        android:textSize="16sp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="@+id/uriPrefix"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/icEditPhoto" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_user_surname"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/bg_edit_text_small_bottom_padding"
-        android:backgroundTint="@color/sceyt_color_border"
-        android:ellipsize="end"
-        android:fontFamily="@font/roboto_medium"
-        android:hint="@string/display_name"
-        android:includeFontPadding="false"
-        android:inputType="textPersonName"
-        android:maxLines="1"
-        android:textColor="@color/sceyt_color_text_primary"
-        android:textColorHint="@color/sceyt_color_text_footnote"
-        android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_user_name"
-        tools:text="John" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_user_nick_name"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/bg_edit_text_small_bottom_padding"
-        android:backgroundTint="@color/sceyt_color_border"
-        android:ellipsize="end"
-        android:fontFamily="@font/roboto_medium"
-        android:hint="@string/display_name"
-        android:includeFontPadding="false"
-        android:inputType="textPersonName"
-        android:maxLines="1"
-        android:textColor="@color/sceyt_color_text_primary"
-        android:textColorHint="@color/sceyt_color_text_footnote"
-        android:textSize="@dimen/mediumTextSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_user_surname"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toEndOf="@+id/uriPrefix"
+        app:layout_constraintTop_toTopOf="@+id/uriPrefix"
         tools:text="John" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -100,7 +126,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/roboto_medium"
         android:lines="3"
@@ -111,7 +137,7 @@
         android:textSize="@dimen/extraSmallTextSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_user_nick_name" />
+        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />
 
     <com.sceyt.chatuikit.presentation.custom_views.CustomFloatingActonButton
         android:id="@+id/btnNext"
