--- a/examples/SceytDemoApp/src/main/res/layout/fragment_create_account.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_create_account.xml
@@ -53,10 +53,10 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/bg_underline"
         android:hint="@string/first_name"
+        android:inputType="textPersonName"
         android:layoutDirection="ltr"
         android:paddingVertical="15dp"
         android:singleLine="true"
-        android:inputType="textPersonName"
         android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_text_primary"
         android:textColorHint="@color/sceyt_color_text_footnote"
@@ -72,9 +72,9 @@
         android:layout_marginHorizontal="24dp"
         android:background="@drawable/bg_underline"
         android:hint="@string/last_name"
+        android:inputType="textPersonName"
         android:layoutDirection="ltr"
         android:paddingVertical="15dp"
-        android:inputType="textPersonName"
         android:singleLine="true"
         android:textAlignment="viewStart"
         android:textColor="@color/sceyt_color_text_primary"
@@ -133,6 +133,8 @@
         android:text="@string/error_username_taken"
         android:textColor="@color/sceyt_color_warning"
         android:textSize="@dimen/extraSmallTextSize"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toTopOf="@id/tv_correct_input_hint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_user_name" />
