add select account logic

--- a/examples/SceytDemoApp/src/main/res/layout/activity_welcome.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/activity_welcome.xml
@@ -8,7 +8,9 @@
     tools:parentTag="com.google.android.material.appbar.AppBarLayout">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container"
+        android:id="@+id/fragmentContainer"
+        android:name="com.sceyt.chat.demo.presentation.login.welcome.WelcomeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
