--- a/examples/SceytDemoApp/src/main/res/layout/fragment_edit_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_edit_profile.xml
@@ -122,22 +122,45 @@
         tools:text="John" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_username_alert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:paddingTop="8dp"
+        android:textSize="@dimen/extraSmallTextSize"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/tv_correct_input_hint"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_user_name"
+        tools:text="@string/error_username_taken"
+        tools:textColor="@color/sceyt_color_warning"
+        tools:visibility="visible" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/error_username_barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/tv_correct_input_hint"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_username_alert" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_correct_input_hint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/roboto_medium"
         android:lines="3"
         android:paddingStart="0dp"
         android:paddingEnd="64dp"
+        android:paddingTop="8dp"
         android:text="@string/username_correct_input_hint"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/extraSmallTextSize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />
+        app:layout_constraintTop_toBottomOf="@+id/error_username_barrier" />
 
     <com.sceyt.chatuikit.presentation.custom_views.CustomFloatingActonButton
         android:id="@+id/btnNext"
