Fix dark mode Ui colors.

--- a/examples/SceytDemoApp/src/main/res/layout/fragment_welcome.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_welcome.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/sceyt_color_background">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_logo"
@@ -44,7 +44,6 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_create_account"
-        tools:layout_editor_absoluteX="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
