--- a/examples/SceytDemoApp/src/main/res/layout/fragment_welcome.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_welcome.xml
@@ -5,15 +5,21 @@
     android:layout_height="match_parent"
     android:background="@color/sceyt_color_background">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.12" />
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:src="@drawable/ic_sceyt_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_login_title"
