--- a/examples/SceytDemoApp/src/main/res/layout/fragment_create_account.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_create_account.xml
@@ -110,6 +110,7 @@
         android:hint="@string/user_name"
         android:inputType="textUri"
         android:layoutDirection="ltr"
+        android:layout_marginEnd="24dp"
         android:paddingVertical="15dp"
         android:singleLine="true"
         android:textAlignment="viewStart"
