--- a/examples/SceytDemoApp/src/main/res/layout/fragment_edit_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_edit_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sceyt_color_primary"
+    android:background="@color/sceyt_color_background"
     android:clickable="true"
     android:focusable="true"
     tools:parentTag="com.google.android.material.appbar.AppBarLayout">
@@ -103,6 +103,7 @@
         android:id="@+id/et_user_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/bg_underline"
         android:hint="@string/user_name"
         android:inputType="textUri"
@@ -153,8 +154,8 @@
         android:fontFamily="@font/roboto_medium"
         android:lines="3"
         android:paddingStart="0dp"
-        android:paddingEnd="64dp"
         android:paddingTop="8dp"
+        android:paddingEnd="64dp"
         android:text="@string/username_correct_input_hint"
         android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/extraSmallTextSize"
