ui fix: set checkbox clickable to false

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_picker_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_picker_video.xml
@@ -22,6 +22,7 @@
         android:id="@+id/checkbox"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:clickable="false"
         android:layout_margin="7dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
