--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_picker_image.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_picker_image.xml
@@ -23,6 +23,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_margin="9dp"
+        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:button="@drawable/sceyt_ic_unchecked_state" />
