--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -47,7 +47,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/messageActionsView"/>
+        app:layout_constraintTop_toBottomOf="@+id/messageActionsView" />
 
     <View
         android:id="@+id/divider"
@@ -73,6 +73,7 @@
             android:hint="@string/sceyt_write_a_message"
             android:includeFontPadding="false"
             android:inputType="textMultiLine|textCapSentences"
+            android:maxLength="5000"
             android:maxLines="6"
             android:minHeight="35dp"
             android:paddingHorizontal="13dp"
